# Flux

./: .gitignore  CMakeLists.txt
include/math/: vec3.h
src/: flux.cpp
src/math/: vec3.cpp
